With Ref to Section 0.1.1. Swagger Documentation and UI for login and User API's.
