# app/Http/Controllers/ApiLoginController.php
@@ -87,24 +87,7 @@ class ApiLoginController extends Controller {
     // parms : none
     // returns: a token with current time stamp enrycpted.
 
-    /**
-     * @SWG\Get(
-     *   path="/api_user_info/{customerId}",
-     *   summary="List customer details",
-     *   operationId="user_information",
-     *   @SWG\Parameter(
-     *     name="customerId",
-     *     in="path",
-     *     description="Target customer.",
-     *     required=true,
-     *     type="integer"
-     *   ),
-     *   @SWG\Response(response=200, description="successful operation"),
-     *   @SWG\Response(response=406, description="not acceptable"),
-     *   @SWG\Response(response=500, description="internal server error")
-     * )
-     *
-     */
+
     public function user_information(Request $request) {
         $customerId = $request->customerId;
         return $customerId;
